fixed the routing issues (wrapped content in ionpage) in the report component. added the table which displays the check-in/out date and the duration. made changes to css for fixing the light and dark theme.

--- a/frontend/src/pages/Tab2.css
+++ b/frontend/src/pages/Tab2.css
@@ -16,7 +16,7 @@
     flex: 1 0 300px;
     text-align: center;
     padding: 0.5em;
-    background: lightgrey; 
+    background: #1f1f1f; 
     border-radius: .5em;
     border: 1px solid black;
     height: fit-content;
