--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -75,7 +75,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 }
-@media (prefers-color-scheme: light) {
+
   /*
    * Dark Colors
    * -------------------------------------------
@@ -232,4 +232,4 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-card-background: #1e1e1e;
   }
-}
+
